--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -13,13 +13,13 @@
 
 @mixin flex_start {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
 @mixin flex_end {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -111,7 +111,7 @@
     box-shadow: none;
     background-color: transparent;
     align-self: stretch;
-    justify-content: start;
+    justify-content: flex-start;
     grid-area: 13 / 1 / 17 / -1;
 
     &__description {
@@ -122,7 +122,7 @@
   & .project-title {
     margin-left: 1rem;
     background-color: transparent;
-    justify-self: start;
+    justify-self: flex-start;
     display: flex;
     flex-direction: column;
     z-index: 10;
