--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -9,14 +9,14 @@
 
   &__description-text {
     font-size: var(--fonts-sm);
-    align-self: start;
+    align-self: flex-start;
     line-height: 1.5;
     color: var(--light-slate);
   }
 
   &__tags-box {
     justify-self: center;
-    align-self: start;
+    align-self: flex-start;
     margin-top: -8rem;
 
     & canvas {
@@ -30,8 +30,8 @@
 .skills_grid {
   @include two_col_grid_section;
   width: 50%;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
   margin: 0 3rem;
 
   & li {
