--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -95,7 +95,7 @@
   &:nth-child(even) {
     & .project-title {
       grid-area: 1 / 1 / 3 / -1;
-      justify-self: start;
+      justify-self: flex-start;
 
       &__before {
         @include flex_start;
@@ -129,7 +129,7 @@
   &:nth-child(odd) {
     & .project-title {
       grid-area: 1 / 1 / 3 / -1;
-      justify-self: end;
+      justify-self: flex-end;
 
       &__before {
         @include flex_end;
