--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -937,13 +937,13 @@ nav .nav--links .login-button-main {
 }
 .about__description-text {
   font-size: var(--fonts-sm);
-  align-self: start;
+  align-self: flex-start;
   line-height: 1.5;
   color: var(--light-slate);
 }
 .about__tags-box {
   justify-self: center;
-  align-self: start;
+  align-self: flex-start;
   margin-top: -8rem;
 }
 .about__tags-box canvas {
@@ -961,8 +961,8 @@ nav .nav--links .login-button-main {
   justify-content: center;
   gap: 9.6rem;
   width: 50%;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
   margin: 0 3rem;
 }
 .skills_grid__text-box {
@@ -1007,7 +1007,7 @@ nav .nav--links .login-button-main {
 }
 .project-container .project-title__before {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   color: var(--green);
   font-size: var(--fonts-sm);
@@ -1064,11 +1064,11 @@ nav .nav--links .login-button-main {
 }
 .project-container:nth-child(even) .project-title {
   grid-area: 1/1/3/-1;
-  justify-self: start;
+  justify-self: flex-start;
 }
 .project-container:nth-child(even) .project-title__before {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 .project-container:nth-child(even) .project-content {
@@ -1078,13 +1078,13 @@ nav .nav--links .login-button-main {
   grid-area: 9/1/-1/-1;
   padding-left: 5px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 .project-container:nth-child(even) .project-anchors {
   grid-area: 11/1/-1/-1;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 .project-container:nth-child(even) .project-image {
@@ -1095,11 +1095,11 @@ nav .nav--links .login-button-main {
 }
 .project-container:nth-child(odd) .project-title {
   grid-area: 1/1/3/-1;
-  justify-self: end;
+  justify-self: flex-end;
 }
 .project-container:nth-child(odd) .project-title__before {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 .project-container:nth-child(odd) .project-content {
@@ -1109,13 +1109,13 @@ nav .nav--links .login-button-main {
   grid-area: 9/1/-1/-1;
   padding-left: 5px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 .project-container:nth-child(odd) .project-anchors {
   grid-area: 11/1/-1/-1;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 .project-container:nth-child(odd) .project-image {
@@ -1608,7 +1608,7 @@ leaflet-popup-content-wrapper,
   }
   .project-container:nth-child(even) .carousel .slider-wrapper.axis-horizontal .slider .slide {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
   .project-container:nth-child(even) .project-image {
@@ -1618,7 +1618,7 @@ leaflet-popup-content-wrapper,
     box-shadow: none;
     background-color: transparent;
     align-self: stretch;
-    justify-content: start;
+    justify-content: flex-start;
     grid-area: 13/1/17/-1;
   }
   .project-container:nth-child(even) .project-content__description {
@@ -1627,7 +1627,7 @@ leaflet-popup-content-wrapper,
   .project-container:nth-child(even) .project-title {
     margin-left: 1rem;
     background-color: transparent;
-    justify-self: start;
+    justify-self: flex-start;
     display: flex;
     flex-direction: column;
     z-index: 10;
@@ -1638,7 +1638,7 @@ leaflet-popup-content-wrapper,
   }
   .project-container:nth-child(even) .project-title__before {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     font-size: var(--fonts-xxs);
   }
@@ -1647,7 +1647,7 @@ leaflet-popup-content-wrapper,
     grid-area: 18/1/-1/-1;
     color: var(--white);
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
   .project-container:nth-child(even) .project-anchors {
@@ -1697,7 +1697,7 @@ leaflet-popup-content-wrapper,
   }
   .project-container:nth-child(odd) .carousel .slider-wrapper.axis-horizontal .slider .slide {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
   .project-container:nth-child(odd) .project-image {
@@ -1707,7 +1707,7 @@ leaflet-popup-content-wrapper,
     box-shadow: none;
     background-color: transparent;
     align-self: stretch;
-    justify-content: start;
+    justify-content: flex-start;
     grid-area: 13/1/17/-1;
   }
   .project-container:nth-child(odd) .project-content__description {
@@ -1716,7 +1716,7 @@ leaflet-popup-content-wrapper,
   .project-container:nth-child(odd) .project-title {
     margin-left: 1rem;
     background-color: transparent;
-    justify-self: start;
+    justify-self: flex-start;
     display: flex;
     flex-direction: column;
     z-index: 10;
@@ -1727,7 +1727,7 @@ leaflet-popup-content-wrapper,
   }
   .project-container:nth-child(odd) .project-title__before {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     font-size: var(--fonts-xxs);
   }
@@ -1736,7 +1736,7 @@ leaflet-popup-content-wrapper,
     grid-area: 18/1/-1/-1;
     color: var(--white);
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
   .project-container:nth-child(odd) .project-anchors {
@@ -1918,6 +1918,16 @@ leaflet-popup-content-wrapper,
   .login-container .login-sidebar {
     max-width: 100%;
     height: auto;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .project-container {
+    padding: 0 14em;
+  }
+}
+@media only screen and (min-width: 1850px) {
+  .project-container {
+    padding: 0 19em;
   }
 }
 
